# codo

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.md  README.md
src/: cli.rs  crud.rs  interface.rs  lib.rs  main.rs
