[package]
name = "codo"
version = "0.1.0"
authors = ["Omnath Mandal"]
edition = "2021"
description = "A simple todo cli application in rust."
readme = "README.md"
license = "MIT"
keywords = ["todo", "cli", "utilities", "rust"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
dotenv = "0.15.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
